examples/memory/negative/07_store_into_longer_lived_owner.skd
// Negative memory example 07: local region payload cannot be stored into a longer-lived owner.

fn retain_text() returns Int {
    Memory scratch_memory = memory(64kb)
    new Text retained_text = ""

    place in scratch_memory {
        new Text temp_text = "hello"
        retained_text = temp_text
    }

    return 0
}
